fixed scrollbars

--- a/client/src/styles/scrollbar.css
+++ b/client/src/styles/scrollbar.css
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar{
-    width: .5rem;
+    width: .3rem;
 }
 
 
